--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -11,9 +11,23 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn_save_logcat"
         android:text="@string/save_logcat"
+        android:visibility="gone"
         android:layout_marginTop="@dimen/margin_10_dp"
         android:layout_marginEnd="@dimen/margin_10_dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/tractor"
+        app:srcCompat="@drawable/tractor"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent=".75"
+        app:layout_constraintHeight_default="percent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
