--- a/app/src/main/res/layout/item_post_layout.xml
+++ b/app/src/main/res/layout/item_post_layout.xml
@@ -17,7 +17,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/idMessage"
+            android:id="@+id/idPost"
             android:textColor="@android:color/black"
             android:textSize="21dp"
             android:text="Title"
