--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -13,18 +13,20 @@
         android:background="@color/custom_toolbar"
         app:layout_constraintTop_toTopOf="parent">
 
-
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            >
+            android:gravity="center_vertical|end"
+            android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:gravity="end"
+            android:layout_marginEnd="@dimen/margin_10_dp"
+            android:textSize="@dimen/text_size_21sp"
             android:id="@+id/userId" />
-
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.appcompat.widget.Toolbar>
