--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -31,6 +31,40 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.appcompat.widget.Toolbar>
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/postId"
+        android:textSize="40sp"
+        android:padding="20dp"
+        android:background="@color/grey"
+        android:textColor="@color/white"
+        android:layout_marginTop="58dp"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/userName"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="58dp"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/postId"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/nickname"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        app:layout_constraintTop_toBottomOf="@id/userName"
+        app:layout_constraintStart_toEndOf="@id/postId"/>
+
     <ProgressBar
         android:id="@+id/progressBarUser"
         android:layout_width="wrap_content"
