--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -51,6 +51,7 @@
         android:textSize="20sp"
         android:textColor="@color/black"
         android:layout_marginTop="58dp"
+        android:text="sdfsdfdsf"
         android:layout_marginStart="@dimen/margin_10_dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/postId"/>
@@ -61,9 +62,102 @@
         android:id="@+id/nickname"
         android:textSize="20sp"
         android:textColor="@color/black"
+        android:text="sadfsags"
         android:layout_marginStart="@dimen/margin_10_dp"
         app:layout_constraintTop_toBottomOf="@id/userName"
         app:layout_constraintStart_toEndOf="@id/postId"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/email"
+        android:textSize="20sp"
+        android:text="@string/e_mail"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginTop="@dimen/margin_10_dp"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        app:layout_constraintTop_toBottomOf="@id/postId"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/userEmail"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="@dimen/margin_10_dp"
+        app:layout_constraintTop_toBottomOf="@id/email"
+        app:layout_constraintStart_toStartOf="@id/email"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/web"
+        android:textSize="20sp"
+        android:text="@string/web"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginTop="@dimen/margin_10_dp"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        app:layout_constraintTop_toBottomOf="@id/userEmail"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/userWeb"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="@dimen/margin_10_dp"
+        app:layout_constraintTop_toBottomOf="@id/web"
+        app:layout_constraintStart_toStartOf="@id/email"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/phone"
+        android:textSize="20sp"
+        android:text="@string/phone"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginTop="@dimen/margin_10_dp"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        app:layout_constraintTop_toBottomOf="@id/userWeb"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/userPhone"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="@dimen/margin_10_dp"
+        app:layout_constraintTop_toBottomOf="@id/phone"
+        app:layout_constraintStart_toStartOf="@id/email"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/city"
+        android:textSize="20sp"
+        android:text="@string/city"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginTop="@dimen/margin_10_dp"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        app:layout_constraintTop_toBottomOf="@id/userPhone"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/userCity"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="@dimen/margin_10_dp"
+        app:layout_constraintTop_toBottomOf="@id/city"
+        app:layout_constraintStart_toStartOf="@id/email"/>
 
     <ProgressBar
         android:id="@+id/progressBarUser"
