--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -159,6 +159,15 @@
         app:layout_constraintTop_toBottomOf="@id/city"
         app:layout_constraintStart_toStartOf="@id/email"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_save_db"
+        android:text="@string/save_to_db"
+        android:layout_margin="@dimen/margin_10_dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <ProgressBar
         android:id="@+id/progressBarUser"
         android:layout_width="wrap_content"
