--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.userFragment.UserFragment">
 
     <androidx.appcompat.widget.Toolbar
@@ -19,163 +19,163 @@
             android:gravity="center_vertical|end"
             android:orientation="horizontal">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:gravity="end"
-            android:layout_marginEnd="@dimen/margin_10_dp"
-            android:textSize="@dimen/text_size_21sp"
-            android:id="@+id/userId" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/userId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_10_dp"
+                android:gravity="end"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_21sp" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/postId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/postId"
-        android:textSize="40sp"
-        android:padding="20dp"
-        android:background="@color/grey"
-        android:textColor="@color/white"
-        android:layout_marginTop="58dp"
         android:layout_marginStart="@dimen/margin_10_dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:layout_marginTop="58dp"
+        android:background="@color/grey"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/userName"
-        android:textSize="20sp"
-        android:textColor="@color/black"
+        android:layout_marginStart="@dimen/margin_10_dp"
         android:layout_marginTop="58dp"
         android:text="sdfsdfdsf"
-        android:layout_marginStart="@dimen/margin_10_dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/postId"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/nickname"
-        android:textSize="20sp"
         android:textColor="@color/black"
-        android:text="sadfsags"
-        android:layout_marginStart="@dimen/margin_10_dp"
-        app:layout_constraintTop_toBottomOf="@id/userName"
-        app:layout_constraintStart_toEndOf="@id/postId"/>
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@id/postId"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/email"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        android:text="sadfsags"
+        android:textColor="@color/black"
         android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@id/postId"
+        app:layout_constraintTop_toBottomOf="@id/userName" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        android:layout_marginTop="@dimen/margin_10_dp"
         android:text="@string/e_mail"
         android:textColor="@color/black"
-        android:textStyle="bold"
-        android:layout_marginTop="@dimen/margin_10_dp"
-        android:layout_marginStart="@dimen/margin_10_dp"
-        app:layout_constraintTop_toBottomOf="@id/postId"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/userEmail"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        android:layout_marginTop="@dimen/margin_10_dp"
-        app:layout_constraintTop_toBottomOf="@id/email"
-        app:layout_constraintStart_toStartOf="@id/email"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/web"
         android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/postId" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/userEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_10_dp"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@id/email"
+        app:layout_constraintTop_toBottomOf="@id/email" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/web"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        android:layout_marginTop="@dimen/margin_10_dp"
         android:text="@string/web"
         android:textColor="@color/black"
-        android:textStyle="bold"
-        android:layout_marginTop="@dimen/margin_10_dp"
-        android:layout_marginStart="@dimen/margin_10_dp"
-        app:layout_constraintTop_toBottomOf="@id/userEmail"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/userWeb"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        android:layout_marginTop="@dimen/margin_10_dp"
-        app:layout_constraintTop_toBottomOf="@id/web"
-        app:layout_constraintStart_toStartOf="@id/email"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/phone"
         android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/userEmail" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/userWeb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_10_dp"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@id/email"
+        app:layout_constraintTop_toBottomOf="@id/web" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        android:layout_marginTop="@dimen/margin_10_dp"
         android:text="@string/phone"
         android:textColor="@color/black"
-        android:textStyle="bold"
-        android:layout_marginTop="@dimen/margin_10_dp"
-        android:layout_marginStart="@dimen/margin_10_dp"
-        app:layout_constraintTop_toBottomOf="@id/userWeb"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/userPhone"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        android:layout_marginTop="@dimen/margin_10_dp"
-        app:layout_constraintTop_toBottomOf="@id/phone"
-        app:layout_constraintStart_toStartOf="@id/email"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/city"
         android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/userWeb" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/userPhone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_10_dp"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@id/email"
+        app:layout_constraintTop_toBottomOf="@id/phone" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        android:layout_marginTop="@dimen/margin_10_dp"
         android:text="@string/city"
         android:textColor="@color/black"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginTop="@dimen/margin_10_dp"
-        android:layout_marginStart="@dimen/margin_10_dp"
-        app:layout_constraintTop_toBottomOf="@id/userPhone"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/userPhone" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/userCity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/userCity"
-        android:textSize="18sp"
-        android:textColor="@color/black"
         android:layout_marginTop="@dimen/margin_10_dp"
-        app:layout_constraintTop_toBottomOf="@id/city"
-        app:layout_constraintStart_toStartOf="@id/email"/>
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@id/email"
+        app:layout_constraintTop_toBottomOf="@id/city" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_save_db"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_save_db"
-        android:text="@string/save_to_db"
         android:layout_margin="@dimen/margin_10_dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:text="@string/save_to_db"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ProgressBar
         android:id="@+id/progressBarUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
