--- a/app/src/main/res/layout/item_post_layout.xml
+++ b/app/src/main/res/layout/item_post_layout.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_message_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     app:cardBackgroundColor="@android:color/white">
 
     <FrameLayout
-        android:background="@color/grey"
         android:layout_width="@dimen/width_1dp"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/grey" />
 
     <FrameLayout
-        android:background="@color/grey"
         android:layout_width="match_parent"
+        android:layout_height="@dimen/height_1dp"
         android:layout_gravity="bottom"
-        android:layout_height="@dimen/height_1dp"/>
+        android:background="@color/grey" />
 
     <FrameLayout
-        android:background="@color/grey"
         android:layout_width="match_parent"
+        android:layout_height="@dimen/height_1dp"
         android:layout_gravity="top"
-        android:layout_height="@dimen/height_1dp"/>
+        android:background="@color/grey" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,24 +29,24 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/idPost"
-            android:gravity="center_horizontal"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_size_21sp"
-            android:layout_marginLeft="@dimen/margin_10_dp"
-            android:layout_marginRight="@dimen/margin_10_dp"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/title"
-            android:maxLines="1"
-            android:textSize="@dimen/text_size_12sp"
             android:layout_marginLeft="@dimen/margin_10_dp"
             android:layout_marginRight="@dimen/margin_10_dp"
-            android:layout_marginBottom="@dimen/margin_10_dp"/>
+            android:gravity="center_horizontal"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/text_size_21sp" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_10_dp"
+            android:layout_marginRight="@dimen/margin_10_dp"
+            android:layout_marginBottom="@dimen/margin_10_dp"
+            android:maxLines="1"
+            android:textSize="@dimen/text_size_12sp" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
