--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -11,7 +11,7 @@
         android:id="@+id/btn_save_logcat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_10_dp"
+        android:layout_marginTop="@dimen/margin_top_58dp"
         android:layout_marginEnd="@dimen/margin_10_dp"
         android:text="@string/save_logcat"
         android:visibility="gone"
