--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -9,7 +9,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/toolbar_height"
         android:background="@color/custom_toolbar"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -38,9 +38,9 @@
         android:layout_marginStart="@dimen/margin_10_dp"
         android:layout_marginTop="58dp"
         android:background="@color/grey"
-        android:padding="20dp"
+        android:padding="@dimen/padding_20dp"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="@dimen/text_size_40sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,10 +49,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_10_dp"
-        android:layout_marginTop="58dp"
-        android:text="sdfsdfdsf"
+        android:layout_marginTop="@dimen/margin_top_58dp"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_size_20sp"
         app:layout_constraintStart_toEndOf="@id/postId"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,9 +60,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_10_dp"
-        android:text="sadfsags"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_size_20sp"
         app:layout_constraintStart_toEndOf="@id/postId"
         app:layout_constraintTop_toBottomOf="@id/userName" />
 
@@ -75,7 +73,7 @@
         android:layout_marginTop="@dimen/margin_10_dp"
         android:text="@string/e_mail"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_size_20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/postId" />
@@ -86,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_10_dp"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size_18dp"
         app:layout_constraintStart_toStartOf="@id/email"
         app:layout_constraintTop_toBottomOf="@id/email" />
 
@@ -98,7 +96,7 @@
         android:layout_marginTop="@dimen/margin_10_dp"
         android:text="@string/web"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_size_20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userEmail" />
@@ -109,7 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_10_dp"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size_18dp"
         app:layout_constraintStart_toStartOf="@id/email"
         app:layout_constraintTop_toBottomOf="@id/web" />
 
@@ -121,7 +119,7 @@
         android:layout_marginTop="@dimen/margin_10_dp"
         android:text="@string/phone"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_size_20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userWeb" />
@@ -132,7 +130,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_10_dp"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size_18dp"
         app:layout_constraintStart_toStartOf="@id/email"
         app:layout_constraintTop_toBottomOf="@id/phone" />
 
@@ -144,7 +142,7 @@
         android:layout_marginTop="@dimen/margin_10_dp"
         android:text="@string/city"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_size_20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userPhone" />
@@ -155,7 +153,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_10_dp"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size_18dp"
         app:layout_constraintStart_toStartOf="@id/email"
         app:layout_constraintTop_toBottomOf="@id/city" />
 
