--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,10 @@
     <dimen name="width_1dp">1dp</dimen>
     <dimen name="height_1dp">1dp</dimen>
     <dimen name="margin_5dp">5dp</dimen>
+    <dimen name="text_size_20sp">20sp</dimen>
+    <dimen name="text_size_18dp">18sp</dimen>
+    <dimen name="toolbar_height">48dp</dimen>
+    <dimen name="padding_20dp">20dp</dimen>
+    <dimen name="text_size_40sp">40sp</dimen>
+    <dimen name="margin_top_58dp">58dp</dimen>
 </resources>
