--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -36,24 +36,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_10_dp"
-        android:layout_marginTop="58dp"
+        android:layout_marginTop="@dimen/margin_10_dp"
         android:background="@color/grey"
         android:padding="@dimen/padding_20dp"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size_40sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_10_dp"
-        android:layout_marginTop="@dimen/margin_top_58dp"
+        android:layout_marginTop="@dimen/margin_10_dp"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_20sp"
         app:layout_constraintStart_toEndOf="@id/postId"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/nickname"
