--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="padding_20dp">20dp</dimen>
     <dimen name="text_size_40sp">40sp</dimen>
     <dimen name="margin_top_58dp">58dp</dimen>
+    <dimen name="zero_dp">0dp</dimen>
 </resources>
